--- a/docs/vite-manifest.json
+++ b/docs/vite-manifest.json
@@ -1,11 +1,11 @@
 {
   "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.505_svelte@3.48.0+vite@3.1.4/node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-91a335be.js",
+    "file": "_app/immutable/start-e4be4a2a.js",
     "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.505_svelte@3.48.0+vite@3.1.4/node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-a023ef18.js",
-      "_singletons-66cdd57a.js"
+      "_index-500611fd.js",
+      "_singletons-d93b01be.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
@@ -15,46 +15,47 @@
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-e03cd969.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-f15bdb5e.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index-a023ef18.js",
-      "_stores-2fb66bbe.js"
+      "_index-500611fd.js",
+      "_stores-d3c39ed5.js",
+      "_singletons-d93b01be.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout-68f71577.css"
+      "_app/immutable/assets/_layout-27c58861.css"
     ]
   },
   "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.505_svelte@3.48.0+vite@3.1.4/node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-69d42407.js",
+    "file": "_app/immutable/components/error.svelte-1a27e501.js",
     "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.505_svelte@3.48.0+vite@3.1.4/node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
-      "_index-a023ef18.js",
-      "_stores-2fb66bbe.js"
+      "_index-500611fd.js",
+      "_stores-d3c39ed5.js"
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-c51ab253.js",
+    "file": "_app/immutable/components/pages/_page.svelte-75a59ae8.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-a023ef18.js"
+      "_index-500611fd.js"
     ],
     "css": [
       "_app/immutable/assets/_page-dd52881c.css"
     ]
   },
   "src/routes/quotes/+page.svelte": {
-    "file": "_app/immutable/components/pages/quotes/_page.svelte-b63b9a65.js",
+    "file": "_app/immutable/components/pages/quotes/_page.svelte-42cd303c.js",
     "src": "src/routes/quotes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-a023ef18.js"
+      "_index-500611fd.js"
     ],
     "css": [
-      "_app/immutable/assets/_page-e88533ab.css"
+      "_app/immutable/assets/_page-d90c7c7f.css"
     ]
   },
   "src/routes/+layout.js": {
@@ -65,27 +66,27 @@
       "__layout-ac73bac2.js"
     ]
   },
-  "_singletons-66cdd57a.js": {
-    "file": "_app/immutable/chunks/singletons-66cdd57a.js",
+  "_singletons-d93b01be.js": {
+    "file": "_app/immutable/chunks/singletons-d93b01be.js",
     "imports": [
-      "_index-a023ef18.js"
+      "_index-500611fd.js"
     ]
   },
-  "_index-a023ef18.js": {
-    "file": "_app/immutable/chunks/index-a023ef18.js"
+  "_index-500611fd.js": {
+    "file": "_app/immutable/chunks/index-500611fd.js"
   },
-  "_stores-2fb66bbe.js": {
-    "file": "_app/immutable/chunks/stores-2fb66bbe.js",
+  "_stores-d3c39ed5.js": {
+    "file": "_app/immutable/chunks/stores-d3c39ed5.js",
     "imports": [
-      "_index-a023ef18.js",
-      "_singletons-66cdd57a.js"
+      "_index-500611fd.js",
+      "_singletons-d93b01be.js"
     ]
   },
   "__layout-ac73bac2.js": {
     "file": "_app/immutable/chunks/_layout-ac73bac2.js"
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-5873eeff.js",
+    "file": "_app/immutable/chunks/0-c15c3e94.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
@@ -94,7 +95,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-c6bf316a.js",
+    "file": "_app/immutable/chunks/1-259dbaf4.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -102,7 +103,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-f7de28f9.js",
+    "file": "_app/immutable/chunks/2-d8265371.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
@@ -110,20 +111,20 @@
     ]
   },
   ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-708d8a22.js",
+    "file": "_app/immutable/chunks/3-1717d452.js",
     "src": ".svelte-kit/generated/nodes/3.js",
     "isDynamicEntry": true,
     "imports": [
       "src/routes/quotes/+page.svelte"
     ]
   },
-  "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-68f71577.css",
-    "src": "src/routes/+layout.css"
-  },
   "src/routes/quotes/+page.css": {
-    "file": "_app/immutable/assets/_page-e88533ab.css",
+    "file": "_app/immutable/assets/_page-d90c7c7f.css",
     "src": "src/routes/quotes/+page.css"
+  },
+  "src/routes/+layout.css": {
+    "file": "_app/immutable/assets/_layout-27c58861.css",
+    "src": "src/routes/+layout.css"
   },
   "src/routes/+page.css": {
     "file": "_app/immutable/assets/_page-dd52881c.css",
