--- a/docs/vite-manifest.json
+++ b/docs/vite-manifest.json
@@ -1,39 +1,40 @@
 {
   "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.505_svelte@3.48.0+vite@3.1.4/node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-98cf3647.js",
+    "file": "_app/immutable/start-379ef834.js",
     "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.505_svelte@3.48.0+vite@3.1.4/node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
       "_index-500611fd.js",
-      "_singletons-2184d00b.js"
+      "_singletons-84ad7147.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
       ".svelte-kit/generated/nodes/1.js",
       ".svelte-kit/generated/nodes/2.js",
-      ".svelte-kit/generated/nodes/3.js"
+      ".svelte-kit/generated/nodes/3.js",
+      ".svelte-kit/generated/nodes/4.js"
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-d6dca271.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-0a3cebd1.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
       "_index-500611fd.js",
-      "_stores-91a0a39b.js",
-      "_singletons-2184d00b.js"
+      "_stores-d8138b1c.js",
+      "_singletons-84ad7147.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout-7ee1540f.css"
+      "_app/immutable/assets/_layout-d1a0bd60.css"
     ]
   },
   "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.505_svelte@3.48.0+vite@3.1.4/node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-c6926d2c.js",
+    "file": "_app/immutable/components/error.svelte-c8d6f23f.js",
     "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.505_svelte@3.48.0+vite@3.1.4/node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
       "_index-500611fd.js",
-      "_stores-91a0a39b.js"
+      "_stores-d8138b1c.js"
     ]
   },
   "src/routes/+page.svelte": {
@@ -58,6 +59,17 @@
       "_app/immutable/assets/_page-d90c7c7f.css"
     ]
   },
+  "src/routes/tv-list/+page.svelte": {
+    "file": "_app/immutable/components/pages/tv-list/_page.svelte-d122d3cb.js",
+    "src": "src/routes/tv-list/+page.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-500611fd.js"
+    ],
+    "css": [
+      "_app/immutable/assets/_page-d90c7c7f.css"
+    ]
+  },
   "src/routes/+layout.js": {
     "file": "_app/immutable/modules/pages/_layout.js-b771d507.js",
     "src": "src/routes/+layout.js",
@@ -66,8 +78,8 @@
       "__layout-ac73bac2.js"
     ]
   },
-  "_singletons-2184d00b.js": {
-    "file": "_app/immutable/chunks/singletons-2184d00b.js",
+  "_singletons-84ad7147.js": {
+    "file": "_app/immutable/chunks/singletons-84ad7147.js",
     "imports": [
       "_index-500611fd.js"
     ]
@@ -75,18 +87,18 @@
   "_index-500611fd.js": {
     "file": "_app/immutable/chunks/index-500611fd.js"
   },
-  "_stores-91a0a39b.js": {
-    "file": "_app/immutable/chunks/stores-91a0a39b.js",
+  "_stores-d8138b1c.js": {
+    "file": "_app/immutable/chunks/stores-d8138b1c.js",
     "imports": [
       "_index-500611fd.js",
-      "_singletons-2184d00b.js"
+      "_singletons-84ad7147.js"
     ]
   },
   "__layout-ac73bac2.js": {
     "file": "_app/immutable/chunks/_layout-ac73bac2.js"
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-c9370104.js",
+    "file": "_app/immutable/chunks/0-118ca213.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
@@ -95,7 +107,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-6c44d249.js",
+    "file": "_app/immutable/chunks/1-9270e385.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -118,16 +130,24 @@
       "src/routes/quotes/+page.svelte"
     ]
   },
-  "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-7ee1540f.css",
-    "src": "src/routes/+layout.css"
+  ".svelte-kit/generated/nodes/4.js": {
+    "file": "_app/immutable/chunks/4-76a27d7b.js",
+    "src": ".svelte-kit/generated/nodes/4.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "src/routes/tv-list/+page.svelte"
+    ]
+  },
+  "src/routes/+page.css": {
+    "file": "_app/immutable/assets/_page-dd52881c.css",
+    "src": "src/routes/+page.css"
   },
   "src/routes/quotes/+page.css": {
     "file": "_app/immutable/assets/_page-d90c7c7f.css",
     "src": "src/routes/quotes/+page.css"
   },
-  "src/routes/+page.css": {
-    "file": "_app/immutable/assets/_page-dd52881c.css",
-    "src": "src/routes/+page.css"
+  "src/routes/+layout.css": {
+    "file": "_app/immutable/assets/_layout-d1a0bd60.css",
+    "src": "src/routes/+layout.css"
   }
 }
