--- a/docs/vite-manifest.json
+++ b/docs/vite-manifest.json
@@ -1,11 +1,11 @@
 {
   "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.505_svelte@3.48.0+vite@3.1.4/node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-dd57a95f.js",
+    "file": "_app/immutable/start-4998ae83.js",
     "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.505_svelte@3.48.0+vite@3.1.4/node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-500611fd.js",
-      "_singletons-7d811a2a.js"
+      "_index-e9506ef8.js",
+      "_singletons-aec9d535.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
@@ -16,58 +16,58 @@
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-dd005174.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-0f8d4f67.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index-500611fd.js",
-      "_stores-db53c268.js",
-      "_singletons-7d811a2a.js"
+      "_index-e9506ef8.js",
+      "_stores-c176e3cb.js",
+      "_singletons-aec9d535.js"
     ],
     "css": [
       "_app/immutable/assets/_layout-da32b7e9.css"
     ]
   },
   "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.505_svelte@3.48.0+vite@3.1.4/node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-db0e8797.js",
+    "file": "_app/immutable/components/error.svelte-fd7fc277.js",
     "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.505_svelte@3.48.0+vite@3.1.4/node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
-      "_index-500611fd.js",
-      "_stores-db53c268.js"
+      "_index-e9506ef8.js",
+      "_stores-c176e3cb.js"
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-75a59ae8.js",
+    "file": "_app/immutable/components/pages/_page.svelte-79f431f4.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-500611fd.js"
+      "_index-e9506ef8.js"
     ],
     "css": [
       "_app/immutable/assets/_page-dd52881c.css"
     ]
   },
   "src/routes/quotes/+page.svelte": {
-    "file": "_app/immutable/components/pages/quotes/_page.svelte-42cd303c.js",
+    "file": "_app/immutable/components/pages/quotes/_page.svelte-6f9bd644.js",
     "src": "src/routes/quotes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-500611fd.js"
+      "_index-e9506ef8.js"
     ],
     "css": [
       "_app/immutable/assets/_page-d90c7c7f.css"
     ]
   },
   "src/routes/tv-list/+page.svelte": {
-    "file": "_app/immutable/components/pages/tv-list/_page.svelte-5a615e41.js",
+    "file": "_app/immutable/components/pages/tv-list/_page.svelte-f41b2994.js",
     "src": "src/routes/tv-list/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-500611fd.js"
+      "_index-e9506ef8.js"
     ],
     "css": [
-      "_app/immutable/assets/_page-d90c7c7f.css"
+      "_app/immutable/assets/_page-91164254.css"
     ]
   },
   "src/routes/+layout.js": {
@@ -78,27 +78,27 @@
       "__layout-ac73bac2.js"
     ]
   },
-  "_singletons-7d811a2a.js": {
-    "file": "_app/immutable/chunks/singletons-7d811a2a.js",
+  "_singletons-aec9d535.js": {
+    "file": "_app/immutable/chunks/singletons-aec9d535.js",
     "imports": [
-      "_index-500611fd.js"
+      "_index-e9506ef8.js"
     ]
   },
-  "_index-500611fd.js": {
-    "file": "_app/immutable/chunks/index-500611fd.js"
+  "_index-e9506ef8.js": {
+    "file": "_app/immutable/chunks/index-e9506ef8.js"
   },
-  "_stores-db53c268.js": {
-    "file": "_app/immutable/chunks/stores-db53c268.js",
+  "_stores-c176e3cb.js": {
+    "file": "_app/immutable/chunks/stores-c176e3cb.js",
     "imports": [
-      "_index-500611fd.js",
-      "_singletons-7d811a2a.js"
+      "_index-e9506ef8.js",
+      "_singletons-aec9d535.js"
     ]
   },
   "__layout-ac73bac2.js": {
     "file": "_app/immutable/chunks/_layout-ac73bac2.js"
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-61e532bf.js",
+    "file": "_app/immutable/chunks/0-4fffb628.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
@@ -107,7 +107,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-1c348e1b.js",
+    "file": "_app/immutable/chunks/1-e4cbce74.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -115,7 +115,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-d8265371.js",
+    "file": "_app/immutable/chunks/2-4152586c.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
@@ -123,7 +123,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-1717d452.js",
+    "file": "_app/immutable/chunks/3-f0e0a82f.js",
     "src": ".svelte-kit/generated/nodes/3.js",
     "isDynamicEntry": true,
     "imports": [
@@ -131,23 +131,27 @@
     ]
   },
   ".svelte-kit/generated/nodes/4.js": {
-    "file": "_app/immutable/chunks/4-c54e4893.js",
+    "file": "_app/immutable/chunks/4-5707b513.js",
     "src": ".svelte-kit/generated/nodes/4.js",
     "isDynamicEntry": true,
     "imports": [
       "src/routes/tv-list/+page.svelte"
     ]
   },
-  "src/routes/tv-list/+page.css": {
+  "src/routes/+layout.css": {
+    "file": "_app/immutable/assets/_layout-da32b7e9.css",
+    "src": "src/routes/+layout.css"
+  },
+  "src/routes/quotes/+page.css": {
     "file": "_app/immutable/assets/_page-d90c7c7f.css",
+    "src": "src/routes/quotes/+page.css"
+  },
+  "src/routes/tv-list/+page.css": {
+    "file": "_app/immutable/assets/_page-91164254.css",
     "src": "src/routes/tv-list/+page.css"
   },
   "src/routes/+page.css": {
     "file": "_app/immutable/assets/_page-dd52881c.css",
     "src": "src/routes/+page.css"
-  },
-  "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-da32b7e9.css",
-    "src": "src/routes/+layout.css"
   }
 }
