--- a/docs/vite-manifest.json
+++ b/docs/vite-manifest.json
@@ -1,40 +1,41 @@
 {
   "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.505_svelte@3.48.0+vite@3.1.4/node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-c6967ec0.js",
+    "file": "_app/immutable/start-6da7c1fb.js",
     "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.505_svelte@3.48.0+vite@3.1.4/node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
       "_index-e9506ef8.js",
-      "_singletons-9d0d8205.js"
+      "_singletons-4c0aae4e.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
       ".svelte-kit/generated/nodes/1.js",
       ".svelte-kit/generated/nodes/2.js",
       ".svelte-kit/generated/nodes/3.js",
-      ".svelte-kit/generated/nodes/4.js"
+      ".svelte-kit/generated/nodes/4.js",
+      ".svelte-kit/generated/nodes/5.js"
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-00d3c1d0.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-2f866f37.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
       "_index-e9506ef8.js",
-      "_stores-adf86da8.js",
-      "_singletons-9d0d8205.js"
+      "_stores-95d2da06.js",
+      "_singletons-4c0aae4e.js"
     ],
     "css": [
       "_app/immutable/assets/_layout-da32b7e9.css"
     ]
   },
   "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.505_svelte@3.48.0+vite@3.1.4/node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-e8b84fbc.js",
+    "file": "_app/immutable/components/error.svelte-7fe0a468.js",
     "src": "node_modules/.pnpm/@sveltejs+kit@1.0.0-next.505_svelte@3.48.0+vite@3.1.4/node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
       "_index-e9506ef8.js",
-      "_stores-adf86da8.js"
+      "_stores-95d2da06.js"
     ]
   },
   "src/routes/+page.svelte": {
@@ -48,15 +49,26 @@
       "_app/immutable/assets/_page-dd52881c.css"
     ]
   },
+  "src/routes/dictionary/+page.svelte": {
+    "file": "_app/immutable/components/pages/dictionary/_page.svelte-a1fb1784.js",
+    "src": "src/routes/dictionary/+page.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-e9506ef8.js"
+    ],
+    "css": [
+      "_app/immutable/assets/_page-ce670966.css"
+    ]
+  },
   "src/routes/quotes/+page.svelte": {
-    "file": "_app/immutable/components/pages/quotes/_page.svelte-e428b81b.js",
+    "file": "_app/immutable/components/pages/quotes/_page.svelte-8c74c5a3.js",
     "src": "src/routes/quotes/+page.svelte",
     "isEntry": true,
     "imports": [
       "_index-e9506ef8.js"
     ],
     "css": [
-      "_app/immutable/assets/_page-8599ce49.css"
+      "_app/immutable/assets/_page-daf83ef7.css"
     ]
   },
   "src/routes/tv-list/+page.svelte": {
@@ -78,8 +90,8 @@
       "__layout-ac73bac2.js"
     ]
   },
-  "_singletons-9d0d8205.js": {
-    "file": "_app/immutable/chunks/singletons-9d0d8205.js",
+  "_singletons-4c0aae4e.js": {
+    "file": "_app/immutable/chunks/singletons-4c0aae4e.js",
     "imports": [
       "_index-e9506ef8.js"
     ]
@@ -87,18 +99,18 @@
   "_index-e9506ef8.js": {
     "file": "_app/immutable/chunks/index-e9506ef8.js"
   },
-  "_stores-adf86da8.js": {
-    "file": "_app/immutable/chunks/stores-adf86da8.js",
+  "_stores-95d2da06.js": {
+    "file": "_app/immutable/chunks/stores-95d2da06.js",
     "imports": [
       "_index-e9506ef8.js",
-      "_singletons-9d0d8205.js"
+      "_singletons-4c0aae4e.js"
     ]
   },
   "__layout-ac73bac2.js": {
     "file": "_app/immutable/chunks/_layout-ac73bac2.js"
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-019e6bdf.js",
+    "file": "_app/immutable/chunks/0-50329260.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
@@ -107,7 +119,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-8e888575.js",
+    "file": "_app/immutable/chunks/1-14d259b1.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -123,35 +135,47 @@
     ]
   },
   ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-3ce79ecd.js",
+    "file": "_app/immutable/chunks/3-9265fd88.js",
     "src": ".svelte-kit/generated/nodes/3.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "src/routes/dictionary/+page.svelte"
+    ]
+  },
+  ".svelte-kit/generated/nodes/4.js": {
+    "file": "_app/immutable/chunks/4-67aab49e.js",
+    "src": ".svelte-kit/generated/nodes/4.js",
     "isDynamicEntry": true,
     "imports": [
       "src/routes/quotes/+page.svelte"
     ]
   },
-  ".svelte-kit/generated/nodes/4.js": {
-    "file": "_app/immutable/chunks/4-c7034361.js",
-    "src": ".svelte-kit/generated/nodes/4.js",
+  ".svelte-kit/generated/nodes/5.js": {
+    "file": "_app/immutable/chunks/5-5d88ee2d.js",
+    "src": ".svelte-kit/generated/nodes/5.js",
     "isDynamicEntry": true,
     "imports": [
       "src/routes/tv-list/+page.svelte"
     ]
   },
-  "src/routes/quotes/+page.css": {
-    "file": "_app/immutable/assets/_page-8599ce49.css",
-    "src": "src/routes/quotes/+page.css"
-  },
-  "src/routes/tv-list/+page.css": {
-    "file": "_app/immutable/assets/_page-edc2d1d8.css",
-    "src": "src/routes/tv-list/+page.css"
+  "src/routes/+layout.css": {
+    "file": "_app/immutable/assets/_layout-da32b7e9.css",
+    "src": "src/routes/+layout.css"
   },
   "src/routes/+page.css": {
     "file": "_app/immutable/assets/_page-dd52881c.css",
     "src": "src/routes/+page.css"
   },
-  "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-da32b7e9.css",
-    "src": "src/routes/+layout.css"
+  "src/routes/dictionary/+page.css": {
+    "file": "_app/immutable/assets/_page-ce670966.css",
+    "src": "src/routes/dictionary/+page.css"
+  },
+  "src/routes/tv-list/+page.css": {
+    "file": "_app/immutable/assets/_page-edc2d1d8.css",
+    "src": "src/routes/tv-list/+page.css"
+  },
+  "src/routes/quotes/+page.css": {
+    "file": "_app/immutable/assets/_page-daf83ef7.css",
+    "src": "src/routes/quotes/+page.css"
   }
 }
